<resources>
    <string name="app_name">NUMAD21Su-YuTang</string>
    <string name="launch_activity">Launch Activity</string>
    <string name="about">About</string>
    <string name="intro_text">Hello World!</string>
    <string name="btnA">A</string>
    <string name="btnB">B</string>
    <string name="btnC">C</string>
    <string name="btnD">D</string>
    <string name="btnE">E</string>
    <string name="btnF">F</string>
    <string name="six_buttons">Choose One Button from Below</string>
    <string name="link_collector">Link Collector</string>
    <string name="add_item">add item</string>
    <string name="item_name">Item name</string>
    <string name="item_description">Description</string>
    <string name="description">This image acts as an icon.</string>
    <string name="url_name">Name</string>
    <string name="url">URL</string>
    <string name="linkAddBtn">Add</string>
    <string name="name_placeholder">Name</string>
    <string name="url_placeholder">URL</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="button_location">Get Location</string>
    <string name="location">Location</string>
    <string name="at_your_service">At Your Service</string>
    <string name="buttonGetNewCases">Get New Case Numbers</string>
    <string name="newCases">NEW COVID CASES IN CA TODAY</string>
</resources>